# bazel-pandoc

./: BUILD.bazel
